Original submission of tweeter project.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,9 +15,23 @@ html {
  */
 
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   color: #244751;
   background-color: #eee;
+}
+
+.container {
+  width: 350px;
+  margin: 140px auto 0 auto;
+  background-color: white;
+  padding: 1em 2em;
+}
+
+.tweet {
+  margin-top: 40px;
+  border: 2px solid #bfbfbf;
+  word-wrap: break-word;
 }
 
 /*
