--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,14 +3,12 @@
   background-color: #c2c2d6;
   border-radius: 3px;
   padding: 10px;
-  margin: auto;
   display: none;
 
 }
 textarea {
   width: 100%;
   border-radius: 1px;
-  padding: 8px;
 
 }
 
@@ -20,7 +18,6 @@ textarea {
 
 .container .new-tweet h2 {
   border-bottom: 1px solid;
-  margin-top: 0px;
 }
 
 #contain-tweets {
@@ -31,7 +28,7 @@ textarea {
 #contain-tweets article {
   height: 100%;
   background-color: white;
-  margin: 10px 0px 10px 0px;
+  margin: 10px 0px 0px 0px;
   border-radius: 3px;
 }
 
@@ -53,7 +50,7 @@ textarea {
   padding: 5px 10px 10px 10px;
 }
 
-#contain-tweets footer div {
+footer div {
   float: right;
   position: relative;
 }
