--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,7 +9,7 @@
 textarea {
   width: 100%;
   border-radius: 1px;
-
+  height: 75px;
 }
 
 .counter {
@@ -18,6 +18,8 @@ textarea {
 
 .container .new-tweet h2 {
   border-bottom: 1px solid;
+  margin: 0px;
+  margin-bottom: 10px;
 }
 
 #contain-tweets {
